[tool.poetry]
name = "slack-transfer"
version = "0.2.9"
description = ""
authors = ["Masanori HIRANO <masa.hirano.1996@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "slack_transfer"}]

[tool.poetry.dependencies]
python = "^3.7,<3.11"
slack-sdk = "^3.18.1"
requests = "^2.28.1"
tqdm = "^4.64.0"
python-dateutil = "^2.8.2"
markdownify = "^0.11.2"
prompt-toolkit = "^3.0.30"


[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
tox = "^3.25.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
types-python-dateutil = "^2.8.19"
types-requests = "^2.28.6"
Sphinx = "^5.1.1"
pydata-sphinx-theme = "^0.9.0"
pip-licenses = "^3.5.4"
pyinstaller = "^5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.black]
skip-magic-trailing-comma = true

[tool.poetry.scripts]
slack_transfer = 'slack_transfer.cli.main:main'

[tool.isort]
profile = 'black'
force_single_line = true

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
